finishing contact controller
