# model/model.go
@@ -1,7 +1,8 @@
 package model
 
 type WebResponse[T any] struct {
-	Data T `json:"data,omitempty"`
+	Data   T            `json:"data"`
+	Paging PageMetadata `json:"paging,omitempty"`
 }
 
 type PageResponse[T any] struct {
@@ -10,7 +11,8 @@ type PageResponse[T any] struct {
 }
 
 type PageMetadata struct {
-	Page  int `json:"page"`
-	Size  int `json:"size"`
-	Total int `json:"total"`
+	Page      int   `json:"page"`
+	Size      int   `json:"size"`
+	TotalItem int64 `json:"total_item"`
+	TotalPage int64 `json:"total_page"`
 }
